--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,10 @@ pysam>=0.19.0
 
 # Utilities
 tqdm>=4.62.0
-heapq>=0.1.0
+h5py>=3.7.0
+ete3>=3.1.2
 
 # Optional: Experiment tracking and visualization
 # wandb>=0.12.0
-# matplotlib>=3.5.0
-# seaborn>=0.11.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
