--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-# Core dependencies for protein evolution using MSA-Transformer
+# Core dependencies for protein mutational pathway generation using MSA-Transformer
 torch>=1.10.0
 numpy>=1.21.0
 scipy>=1.7.0
 
-# ESM (Evolutionary Scale Modeling) - MSA-Transformer and ESM2
+# ESM (Evolutionary Scale Modeling) - MSA-Transformer
 fair-esm>=2.0.0
 
 # Bioinformatics tools
@@ -15,7 +15,3 @@ tqdm>=4.62.0
 h5py>=3.7.0
 ete3>=3.1.2
 
-# Optional: Experiment tracking and visualization
-# wandb>=0.12.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
